--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "deploy": "bash deploy.sh",
     "dev": "vuepress dev docs",
     "build": "vuepress build docs"
   },
